# google_takeout_photos_compression

./: .gitignore  README.md  main.py  pyproject.toml  test.py
src/: imageUtils.py  metadataUtils.py  videoUtils.py
