[project]
name = "google-takeout-photos-compression"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "moviepy>=1.0.3",
    "opencv-python>=4.12.0.88",
    "piexif>=1.1.3",
    "pillow>=12.0.0",
]
